# autoresearch_bio

./: .gitignore  README.md  modal_runner.py  prepare.py  program.md  pyproject.toml  report_small.md  results.tsv  train.py
problems/amp/: modal_runner.py  prepare.py  train.py
problems/gfp/: gfp_run.py  gfp_run2.py  gfp_run3.py  gfp_run4.py  modal_runner.py  prepare.py  train.py
problems/stability/: stability_run.py  stability_run2.py  stability_run3.py  stability_run4.py  stability_run5.py
reports/: honest_assessment.md  report_gfp.md  report_small.md  report_stability.md
