[project]
name = "autoresearch_bio"
version = "0.1.0"
description = "Autonomous research for viral protein fitness prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "scipy>=1.11.0",
    "torch>=2.1.0",
]
